# nfl-predictor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: config.yaml
docs/: ARCHITECTURE.md  SCHEMAS.md
notebooks/: 01_eda_games.ipynb
scripts/: build_features_v0.py  ingest_nflverse.py  run_baselines_v0.py
src/nfl_predictor/: __init__.py
src/nfl_predictor/config/: __init__.py
src/nfl_predictor/data/: ingest_games.py  schemas.py
src/nfl_predictor/evaluation/: __init__.py
src/nfl_predictor/features/: __init__.py  base_game_features.py  elo.py  feature_registry.py  team_rolling_stats.py
src/nfl_predictor/modeling/: __init__.py  baselines.py  datasets.py  metrics.py  train_winner_gbdt_v0.py
src/nfl_predictor/serving/: __init__.py
src/nfl_predictor/utils/: __init__.py  validation.py
tests/: __init__.py  test_placeholder.py
